--- a/styles/components/footer/footer_content.module.scss
+++ b/styles/components/footer/footer_content.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: $color--blue-dark;
     gap: 10px;
     border: 1px solid $color--gray;
     padding: 1rem;
