feat: Create Header component

--- a/styles/settings/variables.scss
+++ b/styles/settings/variables.scss
@@ -1,3 +1,7 @@
 $color--blue-dark: #00517c;
 $color--blue: #0077B7;
 $color--gray: #eaeaea;
+
+$color-brand--primary: #3571AB;
+$color-brand--secondary: #F7C603;
+$color-brand--tertiary: #A52A2A;
