feat: Create Grid Main component`

--- a/styles/settings/variables.scss
+++ b/styles/settings/variables.scss
@@ -1,6 +1,12 @@
 $color--blue-dark: #00517c;
 $color--blue: #0077B7;
 $color--gray: #eaeaea;
+$color--gray-dark: #868686;
+$color--white: #FFFFFF;
+
+$color-grass: #65A927;
+$color-fire: #F78300;
+$color-water: #7CCEF2;
 
 $color-brand--primary: #3571AB;
 $color-brand--secondary: #F7C603;
