--- a/styles/components/footer/footer_content.module.scss
+++ b/styles/components/footer/footer_content.module.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     color: $color--blue-dark;
+    background-color: $color--white;
     gap: 10px;
     border: 1px solid $color--gray;
     padding: 1rem;
